fixed centering on Safari

--- a/css/main.css
+++ b/css/main.css
@@ -153,6 +153,7 @@ img {
 }
 
 .container {
+  -webkit-box-pack: center;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -414,7 +415,6 @@ footer span {
 .flipper {
   -webkit-transition: 0.6s;
   transition: 0.6s;
-  /*-webkit-transform: preserve-3d; */
   transform-style: preserve-3d;
   position: relative;
 }
